# pr-workflow-example

./: .cruft.json  .cspell.json  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  README_code.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/: additional_words
.github/actions/python-poetry-env/: action.yml
.github/actions/spelling/: allow.txt  excludes.txt
.github/workflows/: check-markdown.yml  check-pre-commit.yml  check-python-formatting.yml  check-python.yml  check-spelling.yml  cookiecutter.yml  dependencies.yml  draft_release.yml  release.yml
api_docs/: index.html
calculator/: README.md  __main__.py
changelog/: index.html
code/: index.html
docs/: README.md  api_docs.md  code.md  dummy.md
dummy/: index.html
search/: search_index.json
src/calculator/: __init__.py  __main__.py
tests/: __init__.py  test_calculator.py  test_main.py
